# CEX

./: README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml
api/: .env.api  Cargo.toml
api/src/: error.rs  main.rs  utils.rs
api/src/middleware/: authenticator.rs  mod.rs
api/src/routes/: mod.rs
api/src/routes/market/: depth.rs  klines.rs  market.rs  mod.rs
api/src/routes/quote/: mod.rs  quote.rs
api/src/routes/trades/: historic_trades.rs  mod.rs  recent_trades.rs
api/src/routes/user/: balance.rs  login.rs  logout.rs  mod.rs  register.rs  signup.rs  singin.rs  withdraw.rs
api/src/security/: mod.rs
api/src/security/encryption_decryption/: decrypt.rs  encrypt.rs  keys.rs  mod.rs
api/src/security/hash/: hash.rs  keys.rs  mod.rs
api/src/security/jwt/: decode_jwt.rs  encode_jwt.rs  keys.rs  mod.rs  validate_jwt.rs
api/src/types/: auth.rs  market.rs  mod.rs  trade.rs  trades.rs  user.rs
clickhouse-db/: .env.clickhouse  .gitignore  Cargo.toml  recipe.json
clickhouse-db/src/: connection.rs  error.rs  errors.rs  lib.rs  utils.rs
clickhouse-db/src/models/: price.rs
clickhouse-db/src/types/: kline.rs  mod.rs
engine/: Cargo.toml
engine/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/apps/web/: components.json  package.json
frontend/apps/web/@workspace/ui/components/: input-otp.tsx
postgres-db/: Cargo.toml  diesel.toml
postgres-db/migrations/2025-08-10-091306_v0.0.1/: up.sql
postgres-db/src/: connection.rs  lib.rs  model.rs  schema.rs  utils.rs
redis-db/: Cargo.toml
redis-db/src/: connection.rs  error.rs  lib.rs  main.rs  utils.rs
redis-db/src/types/: message_from_engine.rs  message_to_engine.rs  mod.rs
redis-db/src/utils/: mod.rs  redis_manager.rs
ws/: Cargo.toml
