[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
jsonwebtoken = "8" # Or the latest version
actix-web = "4.11.0"
serde_json = "1.0.143"
dotenv = "0.15.0"
httpstatus = "0.1.2"
log = "0.4.28"
chrono = "0.4.41"
regex = "1.11.1"
thiserror = "2.0.16"
once_cell = "1.21.3"
postgres = { path = "../postgres-db" }
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
env_logger = "0.11.8"
branchia = "0.0.1"
anyhow = "1.0.99"
uuid = "1.18.0"
chacha20poly1305 = "0.10.1"
