[package]
name = "clickhouse-db"
edition = "2024"
version = "0.0.1"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
clickhouse = { version = "0.13.1", features = ["native-tls", "uuid", "chrono"]}
clickhouse-connection-pool = "0.1.8"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
once_cell = "1.21.3"
regex = "1.11.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[lib]
path = "src/lib.rs"
name = "clickhouse_db"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
