[package]
name = "postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2", "numeric"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
redis = "0.32.5"
tokio = {version = "1.43.0", features = ["full", "time"] }
serde_json = "1.0.145"
bigdecimal = { version = "0.4.7", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
log = "0.4.28"
env_logger = "0.11.8"
