[package]
name = "redis"
version = "0.1.0"
edition = "2021"  # safer and well-supported

[features]
r2d2 = []

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
serde_json = "1.0.142"
thiserror = "2.0.16"
validator = "0.20.0"
